hard-gists/73efaccda6025883fc66/run.log
=== Docker Run Log for 73efaccda6025883fc66 ===
Started at: Mi 29. Okt 17:09:02 CET 2025

[2025-10-29 17:09:03] START: Running container for 73efaccda6025883fc66
[2025-10-29 17:09:03] SUCCESS: Container 9c7115adc9e4fcffc5dcf6e29bc95beb44b67b47849e29570d4c2f4f58299afb started for 73efaccda6025883fc66
=== Container logs for 73efaccda6025883fc66 ===
  File "/snippet.py", line 22
    print '=== BEGIN ==='
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 73efaccda6025883fc66 ===
[2025-10-29 17:09:05] INFO: Container 9c7115adc9e4fcffc5dcf6e29bc95beb44b67b47849e29570d4c2f4f58299afb has stopped
